# pysilicon

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  _config.yml  headless_output.txt  poly_cmd_header.h  pyproject.toml
.github/workflows/: claude.yml
.tmp_include_check/: sample_in.h
docs/: index.md
docs/architecture/: cpp.md  firmware.md  hwobj.md  index.md  modes.md  planning.md  rtlverification.md  simulation.md  synthesis.md  unittest.md
docs/examples/: index.md
docs/future/: ai_hook_completion.md  ai_planning.md  cycle_model_training.md  design_analysis.md  index.md  vivado_backend.md
docs/guide/: index.md
docs/installation/: index.md  pytthon.md  vscode.md
docs/overview/: aiharness.md  cpp.md  example.md  firmware.md  flow.md  hwobj.md  index.md  innovations.md  keyfeatures.md  modes.md  motivation.md  planning.md  prior.md  rtlverification.md  salsa.md  simulation.md  synthesis.md  unittest.md  waveflow_overview.drawio
example/: vecunit.py
examples/: CGINV_CONVERSION_REPORT.md  cginv_input_dataschema.py  cginv_output_dataschema.py  cginv_schema.py  cginv_state_dataschema.py  p_array.h  q_array.h  r_array.h  rnorm_array.h  x_array.h
examples/basic_vec/: .gitignore  basic_vec_build.py  kernels.py  run.tcl
examples/conv2d/: conv2d.cpp  conv2d_demo.py  conv2d_test.ipynb  run.tcl  run_df.tcl  timing_analysis.py  view_timing.ipynb
examples/gain_shift/: README.md  gain_shift_demo.py
examples/histogram/: hist.cpp  hist.hpp  hist_demo.py  hist_tb.cpp  run.tcl  view_timing.ipynb
examples/increment/: .gitignore  CODEGEN_NOTES.md  incr.py  incr_build.py  incr_respond_impl.tpp  incr_tb.cpp  incr_transform_impl.cpp  run.tcl
examples/interface/: aximm_demo.py  aximm_queue_demo.py  crossbar_demo.py  regmap_demo.py  schema_transfer_demo.py  stream_demo.py
examples/memory/: mem_demo.py
examples/poly/: coeff_array.h  poly.cpp  poly.hpp  poly.py  poly_build.py  poly_cmd_header.h  poly_demo.ipynb  poly_demo.py  poly_error.h  poly_resp_footer.h  poly_resp_header.h  poly_tb.cpp  run.tcl  sample_data_in.h  sample_data_out.h  view_timing.ipynb
examples/regmap/: .gitignore  README.md  run.tcl  simp_fun.py  simp_fun_build.py  simp_fun_compute_impl.cpp  timing_diagram.py
examples/schemas/: schema_registry_demo.py
examples/shared_mem/: hist.py  hist_build.py  hist_demo.py  hist_validate_impl.cpp  run.tcl  shared_mem_build.py  shared_mem_figures.py
examples/stream_inband/: poly.py  poly_build.py  poly_evaluate_impl.tpp  run.tcl  timing_analysis.py  view_timing.ipynb
examples/timing/: basic_timing_diagram.py  poly_timing.ipynb  timing_ex.ipynb
examples/vmac/: .gitignore  golden.py  kernels.py  run.tcl  vmac_build.py  vmac_cmd.py  vmac_compute_impl.tpp
plans/: aximm_codegen.md  aximm_queue.md  doc_plan.md  hw_component_plan.md  hwcomponent_hook_template_plan.md  memory_simobj.md
pysilicon-extension/src/: extension.ts
pysilicon/ai/: README.md  __init__.py  interface_bundle.py  mcp_server.py  schema_codegen.py  schema_spec.py  type_inference.py
pysilicon/codegen/: __init__.py  streamutils.h  streamutils.py
pysilicon/dev/: create_hello.py
pysilicon/examples/: __init__.py  conv2d.py
pysilicon/hw/: __init__.py  arrayutils.py  aximm.py  aximm_queue.py  clock.py  component.py  dataschema.py  dataschema2.py  dataunion.py  hw_component.py  hwstmt.py  interface.py  memif.py  memory.py  named.py  regmap.py  schema_transfer_interface.py  schema_transfer_interface_plan.md
pysilicon/mcp/: __init__.py  blind_user_llm.py  build_corpus.py  cli_build_example_rag.py  components.py  example_rag.py  file_tools.py  headless.py  registry.py  schema_examples.py  schema_tools.py  server.py
pysilicon/scripts/: create_doc_assets.py  pysilicon_mcp_setup.py  xsim_vcd.py
pysilicon/simulation/: __init__.py  simobj.py  simulation.py
pysilicon/toolchain/: __init__.py  toolchain.py
pysilicon/utils/: __init__.py  csynthparse.py  fixputils.py  timing.py  toolchain.py  vcd.py
pysilicon/xilinxutils/: toolchain.py
scripts/: create_doc_assets.py
test_workspace/: conv1d.py
tests/: test_csynthparse.py  test_timing.py
tests/ai/: test_interface_bundle.py  test_schema_pipeline.py
tests/examples/: test_basic_vec.py  test_build_corpus.py  test_cli_build_example_rag.py  test_complex_kernels.py  test_conv2d_demo.py  test_fixedpoint_conformance.py  test_headless.py  test_hist_cosim.py  test_hist_csim.py  test_hist_demo.py  test_incr_build.py  test_incr_demo.py  test_mcp_setup.py  test_mcp_tools.py  test_mem_demo.py  test_poly_codegen.py  test_poly_demo.py  test_regmap_simp_fun.py  test_vitis_regmap_simp_fun.py  test_vmac_cmd.py  test_vmac_conformance.py  test_vmac_golden.py  test_vmac_numeric.py
tests/hw/: test_hwconst.py  (+32 more)
tmp_codegen/: packet_with_array.h  packet_with_array_tb.h
(+244 files in other folders)
