[project]
name = "pysilicon"
version = "0.1.0"
description = "A Python-first hardware modeling and synthesis framework"
authors = [
    { name = "Sundeep Rangan" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "mcp[cli]>=1.0",
    "openai>=1.0",
]

# Optional developer dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
create_doc_assets = "pysilicon.scripts.create_doc_assets:main"
xsim_vcd = "pysilicon.scripts.xsim_vcd:main"
collect_overlay = "pysilicon.scripts.collect_overlay:main"
sv_sim = "pysilicon.scripts.sv_sim:main"
sv_synth = "pysilicon.scripts.sv_build:run_synth"
sv_impl  = "pysilicon.scripts.sv_build:run_impl"
build_lab_autograder = "pysilicon.scripts.build_lab_autograder:main"
pysilicon_mcp_setup = "pysilicon.scripts.pysilicon_mcp_setup:main"
pysilicon_mcp_server = "pysilicon.mcp.server:main"
build_corpus = "pysilicon.mcp.build_corpus:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Automatically find the pysilicon package and scripts
[tool.setuptools.packages.find]
include = ["pysilicon*", "scripts*"]

# Include non-Python files (schemas, templates, docs assets)
[tool.setuptools]
include-package-data = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
markers = [
    "vitis: marks tests as requiring Vitis HLS installation (slow integration tests)"
]
